2.000_4 (yyyy-mm-dd)

    API / Behaviour Changes:
        - Rename Bifcode::V2 -> Bifcode2
        - Rename *_bifcode() functions to *_bifcode2()

    New Features:
        - None.

    Enhancements:
        - Better test function names.
        - Better test for decoding of BIFCODE_REAL.

    Bug Fixes:
        - None.

    Dependencies:
        - None.

    Packaging:
        - None.

2.000_3 (2019-09-09)

    API / Behaviour Changes:
        - Re-introduce requirement for BIFCODE_DICT keys to be
          BIFCODE_UTF8 or BIFCODE_BYTES.

    New Features:
        - New BIFCODE_BIFCODE type for framing Bifcodes across a
          network connection.
        - Support AnyEvent::Handle integration.

    Enhancements:
        - Only load Carp when we actually need to croak

    Packaging:
        - Add some missing (bugtracker, repo) META data.

2.000_2 (2019-09-08)

    API / Behaviour Changes:
        - Use ":" to separate hash keys from values.
        - Allow hash keys to be of any type.

    Enhancements:
        - Inflate numbers as Perl IV and NV values.
        - Better automatic UTF8/BYTES detection.

2.000_1 (2019-09-02)

    API / Behaviour Changes:
        - Implements bifcode version 2, incompatible with version 1.

1.002 (2018-09-23)

    Packaging:
        - Remove ".readme_from" file from distribution

1.001 (2018-09-21)

    Packaging:
        - Generate README file using githook-perltidy's .readme_from
          support.

1.001_1 (2018-09-21)

    Enhancements:
        - Use boolean::isBoolean for tighter true/false detection
        - Work around Carp::croak's failure to handle exception
          objects

1.0 (2017-11-13)

    First stable release.

0.001_12 (2017-11-12)

    API / Behaviour Changes:
        - UTF8 and BYTES strings now encode with a trailing ","

0.001_11 (2017-11-08)

    Enhancements:
        - Document use of BIFCODE_UTF8 only for hash keys
        - Convert all errors to exception objects